View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025582 | Community | OCCT:Modeling Algorithms | public | 2014-12-10 02:01 | 2015-05-14 15:32 |
Reporter | shoogen | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025582: SIGSEGV in thrusections of circle segments | ||||
Description | Creating a loft between the two circular edges causes a sigsegv. | ||||
Steps To Reproduce | restore filletloft-draw-Loft-00-section.brep Loft-00-section restore filletloft-draw-Loft-01-section.brep Loft-01-section thrusections Loft 0 0 Loft-00-section Loft-01-section Test case was added: bugs modalg_5 bug25582 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5 bug25582 | ||||
|
filletloft-draw-Loft-00-section.brep (1,096 bytes) |
|
filletloft-draw-Loft-01-section.brep (1,108 bytes) |
|
If the circles are moved, so their normals are not coaxial, the loft works. |
|
Branch CR25582 has been created by azv. SHA-1: 440c713f3e0594bb344969c3a546f1216fb60afd Detailed log of new commits: Author: azv Date: Wed Jan 14 17:26:30 2015 +0300 0025582: SIGSEGV in thrusections of circle segments 1. Implemented using of trimmed circular curve 2. Added test case |
|
Branch CR25582 is ready for review |
|
I have found that the same error is possible in lines 436 and 444 (for conical surface), 495 and 500 (plane surface). May be it is needed to make there the same treatment? |
|
Branch CR25582 has been updated forcibly by azv. SHA-1: 87e6c1917919efcc76d9247150fed640dd53bad4 |
|
Remarks were taken into account. The changes were refactored. Please, review updated branch CR25582 |
|
Good refactoring! Reviewed. |
|
Branch will be tested with CR25706_2. |
|
Rise CR25706_2. |
|
Branch CR25582 has been deleted by inv. SHA-1: 87e6c1917919efcc76d9247150fed640dd53bad4 |
occt: master 0fe1715f 2015-01-14 14:26:30
Committer: bugmaster Details Diff |
0025582: SIGSEGV in thrusections of circle segments 1. Implemented using of trimmed circular curve 2. Added test case |
Affected Issues 0025582 |
|
mod - src/BRepFill/BRepFill_Generator.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25582 | Diff File | ||
occt: master 76eeac70 2015-01-23 12:55:56
Committer: bugmaster Details Diff |
0025582: SIGSEGV in thrusections of circle segments Eliminating regressions Fixed compilation warning ('di' : unreferenced formal parameter). Added test bugs/modalg_5/bug25578 |
Affected Issues 0025582 |
|
mod - src/BRepFill/BRepFill_Generator.cxx | Diff File | ||
mod - src/GeomliteTest/GeomliteTest_ModificationCommands.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25578 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-10 02:01 | shoogen | New Issue | |
2014-12-10 02:01 | shoogen | Assigned To | => msv |
2014-12-10 02:01 | shoogen | File Added: filletloft-draw-Loft-00-section.brep | |
2014-12-10 02:01 | shoogen | File Added: filletloft-draw-Loft-01-section.brep | |
2014-12-10 02:07 | shoogen | Note Added: 0035235 | |
2015-01-14 17:12 |
|
Assigned To | msv => azv |
2015-01-14 17:12 |
|
Status | new => assigned |
2015-01-14 17:27 | git | Note Added: 0036062 | |
2015-01-14 17:29 |
|
Note Added: 0036063 | |
2015-01-14 17:29 |
|
Assigned To | azv => msv |
2015-01-14 17:29 |
|
Status | assigned => resolved |
2015-01-14 17:29 |
|
Steps to Reproduce Updated | |
2015-01-14 18:26 | msv | Note Added: 0036067 | |
2015-01-14 18:26 | msv | Assigned To | msv => azv |
2015-01-14 18:26 | msv | Status | resolved => assigned |
2015-01-15 08:24 | git | Note Added: 0036078 | |
2015-01-15 08:25 |
|
Note Added: 0036079 | |
2015-01-15 08:25 |
|
Assigned To | azv => msv |
2015-01-15 08:25 |
|
Status | assigned => resolved |
2015-01-15 10:48 | msv | Note Added: 0036085 | |
2015-01-15 10:48 | msv | Assigned To | msv => bugmaster |
2015-01-15 10:48 | msv | Status | resolved => reviewed |
2015-01-21 11:50 | apn | Assigned To | bugmaster => apn |
2015-01-21 13:07 | apn | Note Added: 0036315 | |
2015-01-21 18:53 | apn | Test case number | => bugs modalg_5 bug25582 |
2015-01-26 16:19 | apn | Note Added: 0036659 | |
2015-01-26 16:19 | apn | Assigned To | apn => bugmaster |
2015-01-26 16:19 | apn | Status | reviewed => tested |
2015-01-26 16:19 | apn | Target Version | => 6.9.0 |
2015-01-30 14:00 | bugmaster | Changeset attached | => occt master 76eeac70 |
2015-01-30 14:00 | bugmaster | Changeset attached | => occt master 0fe1715f |
2015-01-30 14:00 | bugmaster | Status | tested => verified |
2015-01-30 14:00 | bugmaster | Resolution | open => fixed |
2015-03-18 13:34 | git | Note Added: 0038531 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |